cmake_minimum_required (VERSION 2.8.11)
project (datachannels)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Crc32c REQUIRED)
add_library(libdatachannels "")
set_property(TARGET libdatachannels PROPERTY CXX_STANDARD 17)
target_include_directories (libdatachannels PUBLIC ${PROJECT_SOURCE_DIR}/include)
add_subdirectory (src)
add_subdirectory (gtests)

#add_subdirectory (gtests)
